<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/golfball" android:padding="4dip">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourScore" android:textSize="15sp" android:padding="4dip" android:gravity="center_horizontal">
    </TextView>

    <TextView
        android:id="@+id/textScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="15sp"
        android:textStyle="bold" android:padding="2dip">
    </TextView>

    <TextView
        android:id="@+id/textTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeStamp" android:textSize="15sp" android:padding="4dip">
    </TextView>

</LinearLayout>